@@ -457,8 +457,8 @@
 
 // Reset Control Register
 #define RALINK_SYS_RST			(1<<0)
-#define RALINK_MCM_RST			(1<<1)
-#define RALINK_HSDMA_RST		(1<<2)
+#define RALINK_MCM_RST			(1<<2)
+#define RALINK_HSDMA_RST		(1<<5)
 #define RALINK_FE_RST			(1<<6)
 #define RALINK_SPDIF_RST		(1<<7)
 #define RALINK_TIMER_RST		(1<<8)
@@ -523,7 +523,6 @@
 #define RALINK_GDMA_BASE		0xB0002800
 #define RALINK_AES_ENGINE_BASE		0xB0004000
 #define RALINK_FRAME_ENGINE_BASE	0xB0100000
-#define RALINK_PPE_BASE			0xB0100C00
 #define RALINK_ETH_SW_BASE		0xB0110000
 #define RALINK_USB_DEV_BASE		0xB0120000
 #define RALINK_MSDC_BASE		0xB0130000
